--- a/bit_people/package.json
+++ b/bit_people/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "materialize-css": "^1.0.0-rc.1",
+    "moment": "^2.22.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.3.1",
